Banner responds properly

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <nav id="page-banner" class="materialize-red lighten-1" role="navigation">
     <div class="nav-wrapper container"><a id="logo-container" href="http://righttoresearch.org/" class="brand-logo"><img src="img/r2r-logo.png" /></a>
     <ul id="social-nav" class="right">
-      <li><a href="https://www.facebook.com/righttoresearch"><img id="facebook-icon" src="img/fb-icon.png" /></a></li>
-      <li><a href="https://twitter.com/R2RC"><img id="twitter-icon" src="img/tw-icon.png" /></a></li>
+      <li id="nav-fb"><a href="https://www.facebook.com/righttoresearch"><img id="facebook-icon" src="img/fb-icon.png" /></a></li>
+      <li id="nav-tw"><a href="https://twitter.com/R2RC"><img id="twitter-icon" src="img/tw-icon.png" /></a></li>
     </ul>
     </div>
   </nav>
@@ -207,7 +207,7 @@
                       </div>
                     </form>
                   </div>
-                  <p id="intro-guide" class="grey lighten-4 dark-grey-text">This glossary has been designed to inform people about the culture of &lsquo;open scholarship&rsquo; through its most common terms, with a selection of <a href="#resources">key resources</a> below. For more listings &mdash; from podcasts to blogs &mdash; and the community events calendar, check out the <a href="#oad-listings-preamble"><em>Open Access Directory</em></a>. <span id="social-links" class="z-depth-1">Follow the Right To Research Coalition on <a href="https://twitter.com/R2RC">Twitter</a> and <a href="https://www.facebook.com/righttoresearch">Facebook</a></span></p>
+                  <p id="intro-guide" class="grey lighten-4 dark-grey-text">This glossary has been designed to inform people about the culture of &lsquo;open scholarship&rsquo; through its most common terms, with a selection of <a href="#resources">key resources</a> below. For more listings &mdash; from podcasts to blogs &mdash; and the community events calendar, check out the <a href="#oad-listings-preamble"><em>Open Access Directory</em></a>.</p>
 
 <button onclick="toggleStuck();" style="position: fixed; bottom: 2px; right: 2px;">Un/stick header</button>
 
@@ -457,8 +457,8 @@
 
                   <h2 id="contributors">Contributors</h2>
 
-                  <a class="tw-icon ackn-p" href="https://twitter.com/Protohedgehog" tw-handle="@Protohedgehog"><div class="img-holder"><img src="img/tw_Protohedgehog.jpg" class="z-depth-1" /><span class="img-cap-name">Jon Tennant</span></div></a>
-                  <a class="tw-icon ackn-p" href="https://twitter.com/rmounce" tw-handle="@rmounce"><div class="img-holder"><img src="img/tw_rmounce.jpg" class="z-depth-1" /><span class="img-cap-name">Ross Mounce</span></div></a>
+                  <a class="tw-icon ackn-p" href="https://twitter.com/Protohedgehog" title="@Protohedgehog"><div class="img-holder"><img src="img/tw_Protohedgehog.jpg" class="z-depth-1" /><span class="img-cap-name">Jon Tennant</span></div></a>
+                  <a class="tw-icon ackn-p" href="https://twitter.com/rmounce" title="@rmounce"><div class="img-holder"><img src="img/tw_rmounce.jpg" class="z-depth-1" /><span class="img-cap-name">Ross Mounce</span></div></a>
 
                   <div class="row acknowledgement-card">
                     <div class="col s12 m5">
@@ -470,20 +470,20 @@
                   </div>
 
                   <ul id="contrib-list">
-                    <li><a class="tw-icon" href="https://twitter.com/riannone" tw-handle="@riannone"><img src="img/tw_riannone.jpg" class="z-depth-1" /></a><span class="twname">Richard Iannone</span></li>
-                    <li><a class="tw-icon" href="https://twitter.com/chealsye" tw-handle="@chealsye"><img src="img/tw_chealsye.jpg" class="z-depth-1" /></a><span class="twname">Chealsye Bowley</span></li>
-                    <li><a class="tw-icon" href="https://twitter.com/mlpoulter" tw-handle="@mlpoulter"><img src="img/tw_mlpoulter.jpg" class="z-depth-1" /></a><span class="twname">Martin Poulter</span></li>
-                    <li><a class="tw-icon" href="https://twitter.com/kwinkunks" tw-handle="@kwinkunks"><img src="img/tw_kwinkunks.jpg" class="z-depth-1" /></a><span class="twname">Matt Hall</span></li>
-                    <li><a class="tw-icon" href="https://twitter.com/priscillaulguim" tw-handle="@priscillaulguim"><img src="img/tw_priscillaulguim.jpg" class="z-depth-1" /></a><span class="twname">Priscilla Ulguim</span></li>
-                    <li><a class="tw-icon" href="https://twitter.com/LouWoodley" tw-handle="@LouWoodley"><img src="img/tw_LouWoodley.jpg" class="z-depth-1" /></a><span class="twname">Lou Woodley</span></li>
-                    <li><a class="tw-icon" href="https://twitter.com/sibelefausto" tw-handle="@sibelefausto"><img src="img/tw_sibelefausto.jpg" class="z-depth-1" /></a><span class="twname">Sibele Fausto</span></li>
-                    <li><a class="tw-icon" href="https://twitter.com/NazeefaFatima" tw-handle="@NazeefaFatima"><img src="img/tw_NazeefaFatima.jpg" class="z-depth-1" /></a><span class="twname">Nazeefa Fatima</span></li>
-                    <li><a class="tw-icon" href="https://twitter.com/kcranstn" tw-handle="@kcranstn"><img src="img/tw_kcranstn.jpg" class="z-depth-1" /></a><span class="twname">Karen Cranston</span></li>
-                    <li><a class="tw-icon" href="https://twitter.com/parnopaeus" tw-handle="@parnopaeus"><img src="img/tw_parnopaeus.jpg" class="z-depth-1" /></a><span class="twname">Lauren B. Collister</span></li>
-                    <li><a class="tw-icon" href="https://twitter.com/awtaylor83" tw-handle="@awtaylor83"><img src="img/tw_awtaylor83.jpg" class="z-depth-1" /></a><span class="twname">Alasdair Taylor</span></li>
-                    <li><a class="tw-icon" href="https://twitter.com/menzenski" tw-handle="@menzenski"><img src="img/tw_menzenski.jpg" class="z-depth-1" /></a><span class="twname">Matt Menzenski</span></li>
-                    <li><a class="tw-icon" href="https://twitter.com/PHerterich" tw-handle="@PHerterich"><img src="img/tw_PHerterich.jpg" class="z-depth-1" /></a><span class="twname">Patricia Herterich</span></li>
-                    <li><a class="tw-icon" href="https://twitter.com/biochemistries" tw-handle="@biochemistries"><img src="img/tw_biochemistries.jpg" class="z-depth-1" /></a><span class="twname">Louis Maddox</span></li>
+                    <li><a class="tw-icon" href="https://twitter.com/riannone" title="@riannone"><img src="img/tw_riannone.jpg" class="z-depth-1" /></a><span class="twname">Richard Iannone</span></li>
+                    <li><a class="tw-icon" href="https://twitter.com/chealsye" title="@chealsye"><img src="img/tw_chealsye.jpg" class="z-depth-1" /></a><span class="twname">Chealsye Bowley</span></li>
+                    <li><a class="tw-icon" href="https://twitter.com/mlpoulter" title="@mlpoulter"><img src="img/tw_mlpoulter.jpg" class="z-depth-1" /></a><span class="twname">Martin Poulter</span></li>
+                    <li><a class="tw-icon" href="https://twitter.com/kwinkunks" title="@kwinkunks"><img src="img/tw_kwinkunks.jpg" class="z-depth-1" /></a><span class="twname">Matt Hall</span></li>
+                    <li><a class="tw-icon" href="https://twitter.com/priscillaulguim" title="@priscillaulguim"><img src="img/tw_priscillaulguim.jpg" class="z-depth-1" /></a><span class="twname">Priscilla Ulguim</span></li>
+                    <li><a class="tw-icon" href="https://twitter.com/LouWoodley" title="@LouWoodley"><img src="img/tw_LouWoodley.jpg" class="z-depth-1" /></a><span class="twname">Lou Woodley</span></li>
+                    <li><a class="tw-icon" href="https://twitter.com/sibelefausto" title="@sibelefausto"><img src="img/tw_sibelefausto.jpg" class="z-depth-1" /></a><span class="twname">Sibele Fausto</span></li>
+                    <li><a class="tw-icon" href="https://twitter.com/NazeefaFatima" title="@NazeefaFatima"><img src="img/tw_NazeefaFatima.jpg" class="z-depth-1" /></a><span class="twname">Nazeefa Fatima</span></li>
+                    <li><a class="tw-icon" href="https://twitter.com/kcranstn" title="@kcranstn"><img src="img/tw_kcranstn.jpg" class="z-depth-1" /></a><span class="twname">Karen Cranston</span></li>
+                    <li><a class="tw-icon" href="https://twitter.com/parnopaeus" title="@parnopaeus"><img src="img/tw_parnopaeus.jpg" class="z-depth-1" /></a><span class="twname">Lauren B. Collister</span></li>
+                    <li><a class="tw-icon" href="https://twitter.com/awtaylor83" title="@awtaylor83"><img src="img/tw_awtaylor83.jpg" class="z-depth-1" /></a><span class="twname">Alasdair Taylor</span></li>
+                    <li><a class="tw-icon" href="https://twitter.com/menzenski" title="@menzenski"><img src="img/tw_menzenski.jpg" class="z-depth-1" /></a><span class="twname">Matt Menzenski</span></li>
+                    <li><a class="tw-icon" href="https://twitter.com/PHerterich" title="@PHerterich"><img src="img/tw_PHerterich.jpg" class="z-depth-1" /></a><span class="twname">Patricia Herterich</span></li>
+                    <li><a class="tw-icon" href="https://twitter.com/biochemistries" title="@biochemistries"><img src="img/tw_biochemistries.jpg" class="z-depth-1" /></a><span class="twname">Louis Maddox</span></li>
                   </ul>
                 </article>
       </div>
